<resources>
    <string name="app_name">Pland</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Add Expense</string>
    <string name="expenses">Expenses</string>
    <string name="statistics">Statistics</string>
    <string name="amount">Сумма</string>
    <string name="description">Описание</string>
    <string name="category">Категория</string>
    <string name="add">Добавить</string>
    <string name="required">Обязательное поле</string>
    <string name="addExpenseSuccess">Трата успешно добавлена</string>
    <string name="addExpenseError">Не удалось добавить трату</string>
    <string name="date">Дата</string>
    <string name="today">Траты за день</string>
    <string name="month">Траты за месяц</string>
    <string name="all">Все</string>
    <string name="update">Изменить</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="enter">Войти</string>
    <string name="loginError">Неверный логин или пароль</string>
</resources>