<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ait0ne.expensetracker.ui.viewmodels.AddExpenseViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <com.ait0ne.expensetracker.ui.painters.CurvedLinearLayout
            android:id="@+id/llTodayContainer"
            android:layout_width="match_parent"
            android:layout_height="300dp"

            android:orientation="horizontal"
            android:gravity="center"


            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@{viewModel.day_total.toString() + '฿'}"
                    android:textSize="28sp"

                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </com.ait0ne.expensetracker.ui.painters.CurvedLinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingHorizontal="20dp"

            >




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAmountContainer"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@id/etDescriptionContainer"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:hintEnabled="false"
                app:expandedHintEnabled="false"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawableStart="@drawable/ic_tbh"
                    android:drawablePadding="10dp"
                    android:background="@drawable/violet_border"
                    android:digits="0123456789."
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="10dp"
                    android:text="@={viewModel.addExpenseFormState.amount}"

                    android:textCursorDrawable="@drawable/edit_text_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDescriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@id/atvCategoryContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAmountContainer"
                app:hintEnabled="false"
                app:expandedHintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/violet_border"
                    android:hint="@string/description"
                    android:paddingHorizontal="10dp"
                    android:drawableStart="@drawable/ic_note"
                    android:drawablePadding="10dp"
                    android:text="@={viewModel.addExpenseFormState.description}"
                    android:textCursorDrawable="@drawable/edit_text_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/atvCategoryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@id/tvDateContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDescriptionContainer"
                app:hintEnabled="false"
                app:expandedHintEnabled="false"
                >

                <AutoCompleteTextView
                    android:id="@+id/atvCategory"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/violet_border"
                    android:completionThreshold="0"
                    android:gravity="center_vertical"
                    android:hint="@string/category"
                    android:paddingHorizontal="10dp"
                    android:text="@={viewModel.addExpenseFormState.category}"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:drawableStart="@drawable/ic_list2"
                    android:drawablePadding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvDateContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@id/btAddExpense"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/atvCategoryContainer"
                app:hintEnabled="false"
                app:expandedHintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/violet_border"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:paddingHorizontal="10dp"
                    android:text="@{viewModel.addExpenseFormState.date}"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/expensesLoader"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:elevation="50dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btAddExpense"
                app:layout_constraintLeft_toLeftOf="@id/btAddExpense"
                app:layout_constraintTop_toTopOf="@id/btAddExpense" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAddExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_main"
                android:onClick="@{() -> viewModel.addExpense()}"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDateContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>