<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.ait0ne.expensetracker.ui.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLoginContainer"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:expandedHintEnabled="false"

            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/etPasswordContainer"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/violet_border"
   
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:hint="@string/login"

                android:paddingHorizontal="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@={viewModel.login}"

                android:textCursorDrawable="@drawable/edit_text_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/btLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLoginContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/violet_border"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@={viewModel.password}"
                android:textCursorDrawable="@drawable/edit_text_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_main"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/enter"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPasswordContainer"

            />

        <ProgressBar
            android:id="@+id/loginLoader"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:elevation="50dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btLogin"
            app:layout_constraintLeft_toLeftOf="@id/btLogin"
            app:layout_constraintTop_toTopOf="@id/btLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
